tests/jsonnet/pass/array_comprehension2.jsonnet
local x1 = [1, 2, 3];
[x + 1 for x in x1]
