tests/jsonnet/errors/object_comprehension1.jsonnet
local x = 10; { ["" + x]: x for x in [x, x + 1, x + 2] }
